--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <head>
-  <link rel="stylesheet" src="style.css">
   <title>love is...</title>
 </head>
 <h1 class="text">MY "LOVE" IS THIS GIRL</h1>
 <img src="img.jpg" class="jpg">
+<style>
+  h1 {
+  color: red;
+  font-family: Arial;
+}
+img {
+  width: 200px;
+  height: 500px;
+}
+</style>
