--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
   <title>love is...</title>
 </head>
 <h1 class="text">MY "LOVE" IS THIS GIRL</h1>
-<img src="https://drive.google.com/file/d/10nz5ts-BanmkzmJFS42z3-8sQfWQ111g/view?usp=drivesdk"
-class="jpg">
+<img src="img.jpg" class="jpg">
 <style>
   h1 {
   color: red;
