--- a/index.html
+++ b/index.html
@@ -2,14 +2,10 @@
   <title>love is...</title>
 </head>
 <h1 class="text">MY "LOVE" IS THIS GIRL</h1>
-<img src="https://drive.google.com/file/d/10nz5ts-BanmkzmJFS42z3-8sQfWQ111g/view?usp=drivesdk" class="jpg">
+<img alt="s" src="https://drive.google.com/file/d/10nz5ts-BanmkzmJFS42z3-8sQfWQ111g/view?usp=drivesdk" class="jpg">
 <style>
   h1 {
   color: red;
   font-family: Arial;
-}
-img {
-  width: 45%;
-  height: 55%;
 }
 </style>
